# nosj-ruby

./: .gitignore  .yardopts  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  NOTICE  README.md  Rakefile  lefthook.yml  nosj.gemspec
.cargo/: config.toml
.github/workflows/: fuzz.yml  lint.yml  release.yml  test.yml
benchmark/: benchmark.rb  homebrew-llvm.json  rails_benchmark.rb  simple.json  small_mixed.json  tolstoy.json
ext/nosj/: Cargo.toml  extconf.rb
ext/nosj/fuzz/: .gitattributes  Cargo.toml  README.md
ext/nosj/fuzz/fuzz_targets/: lines.rs  patch.rs  reformat.rs
ext/nosj/fuzz/seeds/lines/: basic.ndjson  error_line.ndjson
ext/nosj/fuzz/seeds/reformat/: escapes.json  mixed.json  surrogate_key.json
ext/nosj/fuzz/src/: lib.rs  prelude.rb
ext/nosj/src/: errors.rs  files.rs  lazy.rs  lib.rs  lines.rs  parse.rs  patch.rs  pointer.rs  reformat.rs  sink.rs  state.rs  stats.rs
lib/: nosj.rb
lib/nosj/: json.rb  lazy.rb  multi_json.rb  native.rb  rails.rb  version.rb
script/: bench_sweep.rb  pgo.sh
script/ci/: alpine-pgo-build.sh  pgo-build-stage.sh  smoke.rb
sig/: nosj.rbs
spec/: batch_spec.rb  dig_spec.rb  files_spec.rb  generate_spec.rb  json_dropin_spec.rb  lazy_spec.rb  lines_spec.rb  nosj_spec.rb  parse_errors_spec.rb  parse_spec.rb  patch_spec.rb  rails_integration_spec.rb  rails_spec.rb  reformat_spec.rb  signature_spec.rb  spec_helper.rb  stats_spec.rb  valid_spec.rb
spec/support/: corpus.rb
