# This Cargo.toml is here to let externals tools (IDEs, etc.) know that this is
# a Rust project. Your extensions dependencies should be added to the Cargo.toml
# in the ext/ directory.

[workspace]
members = ["./ext/nosj"]
resolver = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
# Ship lean artifacts: leftover debug sections (e.g. from the
# precompiled std) are stripped. The symbol table stays, so crash
# backtraces keep function names.
strip = "debuginfo"
# No landing pads: a Ruby extension must never unwind across the C
# boundary anyway, and magnus's per-pair hash-iteration panic guard
# (std::panic::catch_unwind) compiles to a plain call under abort.
# Measured ~4ns per object pair on Zen 4 with unwinding enabled.
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
opt-level = 3
lto = "fat"
