[package]
name = "nosj-ruby-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
# Same magnus version as the extension so cargo unifies them into one
# crate. Only this harness enables "embed" (rb-sys/link-ruby): fuzz
# binaries host their own VM, while the extension must never link
# libruby (its symbols resolve from the host process at load time).
magnus = { version = "0.8", features = ["embed", "rb-sys"] }
# The extension as an rlib; its lib target is named `nosj` (the bundle
# name), so rename the dependency to keep fuzz code readable.
nosj_ext = { path = "..", package = "nosj_native" }

# Prevent this from being interpreted as part of a parent workspace.
[workspace]

[[bin]]
name = "reformat"
path = "fuzz_targets/reformat.rs"
test = false
doc = false
bench = false

[[bin]]
name = "lines"
path = "fuzz_targets/lines.rs"
test = false
doc = false
bench = false

[[bin]]
name = "patch"
path = "fuzz_targets/patch.rs"
test = false
doc = false
bench = false
